--- a/css/components/header.css
+++ b/css/components/header.css
@@ -71,7 +71,7 @@
     background-color: white;
 }
 
-@media all and (min-width: 460px) {
+@media all and (min-width: 640px) {
 
     .menu{
         display: flex;
@@ -85,5 +85,8 @@
     }
     .logo-text{
         font-size: 42px;
+    }
+    .header-right{
+        align-items: flex-end;
     }
 }
