--- a/css/components/hero.css
+++ b/css/components/hero.css
@@ -1,6 +1,6 @@
 .section-hero{
-        position: relative;
-        }
+    position: relative;
+}
 .background{
     position: absolute;
     left:0;
@@ -47,4 +47,10 @@
     font-size: 31px;
     font-weight: 300;
     width: 235px;
+    border:1px solid #5094f2;
+}
+.button:hover{
+    color: #5094f2;
+    background-color: #ffffff;
+    cursor: pointer;
 }
