--- a/css/icons/fontello.css
+++ b/css/icons/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?83246919');
-  src: url('../font/fontello.eot?83246919#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?83246919') format('woff2'),
-       url('../font/fontello.woff?83246919') format('woff'),
-       url('../font/fontello.ttf?83246919') format('truetype'),
-       url('../font/fontello.svg?83246919#fontello') format('svg');
+  src: url('../font/fontello.eot?82160549');
+  src: url('../font/fontello.eot?82160549#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?82160549') format('woff2'),
+       url('../font/fontello.woff?82160549') format('woff'),
+       url('../font/fontello.ttf?82160549') format('truetype'),
+       url('../font/fontello.svg?82160549#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?83246919#fontello') format('svg');
+    src: url('../font/fontello.svg?82160549#fontello') format('svg');
   }
 }
 */
@@ -56,6 +56,6 @@
 }
  
 .icon-ok-circled:before { content: '\e800'; } /* '' */
-.icon-desktop-circled:before { content: '\e801'; } /* '' */
 .icon-pencil:before { content: '\e802'; } /* '' */
+.icon-desktop:before { content: '\e803'; } /* '' */
 .icon-shopping-basket:before { content: '\f291'; } /* '' */
