--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@
 @import url('components/card.css');
 @import url('components/navigation.css');
 @import url('components/form.css');
-@import url('components/breadcrumb.css');
+@import url('components/section.css');
 @import url('components/table.css');
 @import url('components/contact.css');
 @import url('components/hero.css');
