--- a/css/components/section.css
+++ b/css/components/section.css
@@ -5,6 +5,7 @@
     display: flex;
     flex-direction: column;
     padding: 40px;
+    border-bottom: 1px solid gainsboro;
 }
 .section-title{
     color: #6f7173;
