--- a/css/components/card.css
+++ b/css/components/card.css
@@ -64,7 +64,8 @@
 }
 .shopping-image img{
     height:162px;
-    object-fit: cover;
+    object-fit: contain;
+    width: 100%;
 }
 .card-shopping-title{
     width:100%;
@@ -85,5 +86,49 @@
 }
 .card-shopping-desc li{
     list-style-type: none;
-    
+}
+@media all and (min-width: 640px) {
+    .card-pc{
+       display:flex;
+       flex-direction: column;
+       align-items: center;
+    }
+    .card-info{
+        align-items: center;
+    }
+    .card-title{
+        font-size: 20px;
+        line-height: 44.42px;
+    }
+    .card-desc{
+        font-size: 14px;
+        width:250px;
+        text-align: center;
+    }
+    .shopping-header{
+        justify-content: flex-start;
+        padding-top: 20px;
+    }
+    .card-shopping-title{
+        font-size: 26px;
+        font-weight: 400;
+        line-height: 44.42px;
+    }
+    .card-shopping-desc{
+        margin: 0;
+        font-size: 15px;
+        font-weight: 300;
+        width: 100%;
+        text-align: left;
+    }
+    .card-shopping-desc li{
+        line-height: 25.42px;
+    }
+    .shopping-image{
+        max-width:371px;
+        width: 100%;
+    }
+    .shopping-header img{
+        height: 279px;
+    }
 }
