--- a/css/components/grid.css
+++ b/css/components/grid.css
@@ -1,13 +1,10 @@
 .row{
     display: flex;
     flex-wrap: wrap;
-}
-.col{
-    
-}
+    }
 .col-40-sm{
     padding: 0 33px;
-    width: 40%;
+    width:40%
 }
 .col-60-sm{
     padding: 0 33px;
@@ -20,4 +17,25 @@
 .col-shopping-sm{
     width:100%;
     flex-direction: column;
+}
+@media all and (min-width: 640px) {
+    .col-60{
+       display: flex;
+       flex-direction: column;
+       justify-content: center;
+    }
+    .col-40{
+        width:40% 
+    }
+    .col-card{
+        width:33.33%;
+        border:none;
+    }
+    .col-shopping-40{
+        width:40%;
+    }
+    .col-shopping-60{
+        width:60%;
+        padding: 30px;
+    }
 }
