--- a/css/components/base.css
+++ b/css/components/base.css
@@ -17,7 +17,7 @@ main{
 }
 .container {
   max-width:1250px;
-  min-width: 330px;
+  padding: 30px;
   display: flex;
   flex-wrap: wrap;
   margin:0 auto;
