--- a/css/components/grid.css
+++ b/css/components/grid.css
@@ -3,13 +3,10 @@
     flex-wrap: wrap;
     width: 100%;
     }
-.col-40-sm{
-    padding: 0 33px;
-    width:40%
-}
-.col-60-sm{
-    padding: 0 33px;
-    width: 60%;
+.col-xs{
+    width:100%;
+    display: flex;
+    justify-content:center;
 }
 .col-card-sm{
     width:100%;
@@ -35,5 +32,14 @@
     .col-shopping{
         width:50%;
     }
-    
+}
+@media all and (min-width:480px){
+    .col-40-sm{
+        padding: 0 33px;
+        width:40%
+    }
+    .col-60-sm{
+        padding: 0 33px;
+        width: 60%;
+    }
 }
