--- a/css/components/grid.css
+++ b/css/components/grid.css
@@ -1,12 +1,12 @@
 .row{
     display: flex;
     flex-wrap: wrap;
-    width: 100%;
     }
 .col-xs{
     width:100%;
     display: flex;
     justify-content:center;
+    padding-left: 30px;
 }
 .col-card-sm{
     width:100%;
@@ -23,7 +23,8 @@
        justify-content: center;
     }
     .col-40{
-        width:40% 
+        width:40%;
+        padding-left: 50px;
     }
     .col-card{
         width:33.33%;
@@ -35,7 +36,7 @@
 }
 @media all and (min-width:480px){
     .col-40-sm{
-        padding: 0 33px;
+        padding-left: 50px;
         width:40%
     }
     .col-60-sm{
