--- a/css/components/footer.css
+++ b/css/components/footer.css
@@ -1,7 +1,7 @@
 
 .copyright{
     color: #909090;
-    font-family: "Segoe WPN";
+    font-family: "Segoe WP";
     font-size: 15px;
     font-weight: 300;
     line-height: 36px;
