--- a/css/components/grid.css
+++ b/css/components/grid.css
@@ -6,8 +6,7 @@
     width:100%;
     display: flex;
     justify-content:center;
-    padding-left: 30px;
-}
+    }
 .col-card-sm{
     width:100%;
     border-bottom: 1px solid gainsboro;
@@ -16,11 +15,13 @@
     width:100%;
     flex-direction: column;
 }
-@media all and (min-width: 640px) {
+
+@media all and (min-width: 641px) {
     .col-60{
        display: flex;
        flex-direction: column;
        justify-content: center;
+       width:60%;
     }
     .col-40{
         width:40%;
@@ -32,9 +33,13 @@
     }
     .col-shopping{
         width:50%;
+        padding: 15px;
     }
 }
-@media all and (min-width:480px){
+@media all and (min-width: 960px) {
+
+}
+@media all and (min-width:480px) and (max-width:640px){
     .col-40-sm{
         padding-left: 50px;
         width:40%
