--- a/css/components/header.css
+++ b/css/components/header.css
@@ -1,6 +1,6 @@
 .header-container{
     background-color: white;
-    padding:30px;
+    padding: 30px;
     justify-content: space-between;
     flex-direction: row;
     flex-wrap: nowrap;
@@ -25,7 +25,7 @@
     padding:6px 17px;
     color: #000000;
     font-family: "Segoe WP";
-    font-size: 49px;
+    font-size: 40px;
     font-weight: 300;
     letter-spacing: 0.42px;
 }
@@ -40,21 +40,24 @@
     flex-direction: row;
     justify-content: space-between;
     flex-wrap: wrap;
+    margin: 0;
 }
 .menu-items{
     list-style-type: none;
-    padding-right: 30px;
+    margin-right: 30px;
     font-family: "Segoe WP";
     font-size: 20px;
     color: rgba(108, 108, 108, 255);
+    border-bottom: 2px solid transparent;
 }
 
 .menu-items a:hover{
     color:darkblue;
 }
-.menu-items a.active, .active:hover{
-    color:#5094f2;
-}
+.menu-items a.active, a.active:hover{
+    border-bottom: 5px solid#5094f2;
+    color: rgba(108, 108, 108, 255);
+   }
 .blue-menu{
     width:54px;
     height:48px;
@@ -69,8 +72,12 @@
     height:6px;
     background-color: white;
 }
-
-@media all and (min-width: 640px) {
+@media all and (min-width: 480px){
+        .logo-text{
+            font-size: 49px;
+        }  
+}
+@media all and (min-width: 640px){
 
     .menu{
         display: flex;
@@ -88,4 +95,13 @@
     .header-right{
         align-items: flex-end;
     }
+    .header-container{
+        padding: 10px 30px;
+    }
+}
+@media all and (min-width: 960px) {
+    .header-container{
+        padding: 10px 150px;
+    }
+    
 }
