--- a/css/components/card.css
+++ b/css/components/card.css
@@ -141,6 +141,9 @@
     .shopping-image img{
         height: 279px;
     }
+    .card-shopping-title{
+        text-align: left;
+    }
 }
 @media all and (min-width:960px){
     .shopping-image{
