--- a/css/components/section.css
+++ b/css/components/section.css
@@ -23,6 +23,7 @@
     .section-title{
         text-align: left;
         margin-bottom: 0px;
+        padding-left: 30px;
     }
     .section-shopping{
         padding-bottom: 0;
