--- a/css/components/base.css
+++ b/css/components/base.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
 }
 html {
-  font-family: "Segoe UI", 'Open Sans', sans-serif;
+  font-family: "Segoe WP Light", 'Open Sans', sans-serif;
   font-size: 16px;
   line-height: 1.5;
   background: #fff;
