--- a/css/components/card.css
+++ b/css/components/card.css
@@ -54,7 +54,7 @@
 }
 .card-title{
     color: #5094f2;
-    font-family: "Segoe WP";
+    font-family: "Segoe WP Light";
     font-size: 34px;
     font-weight: 400;
     line-height: 51.86px;
@@ -86,14 +86,14 @@
 .card-shopping-title{
     width:100%;
     color: #6f7173;
-    font-family: "Segoe WP";
+    font-family: "Segoe WP Light";
     font-size: 34px;
     font-weight: 400;
     line-height: 44.42px;
 }
 .card-shopping-desc{
     color: #909090;
-    font-family: "Segoe WP";
+    font-family: "Segoe WP Light";
     font-size: 17px;
     font-weight: 300;
     line-height: 36px;
@@ -101,7 +101,7 @@
 }
 .card-shopping-desc li{
     list-style-type: none;
-    font-family: "Segoe WP";
+    font-family: "Segoe WP Light";
 }
 
 @media all and (min-width: 641px){
@@ -116,7 +116,7 @@
     }
     .card-title{
         font-size: 20px;
-        font-family: "Segoe WPN";
+        font-family: "Segoe WP Light";
         font-size: 20px;
         font-weight: 400;
         line-height: 44.42px;
@@ -124,7 +124,7 @@
         text-align: center;
     }
     .card-desc{
-        font-family: "Segoe WPN";
+        font-family: "Segoe WP Light";
         font-size: 16px;
         text-align: center;
     }
@@ -146,7 +146,7 @@
     }
     .card-shopping-desc{
         margin: 0;
-        font-family: "Segoe WPN";
+        font-family: "Segoe WP Light";
         font-size: 15px;
         font-weight: 300;
         line-height: 36px;
@@ -168,9 +168,6 @@
     }
 }
 @media all and (min-width:960px){
-    .shopping-image{
-       
-    }
     .shopping-image img{
         height: 279px;
     }
